rust/template/ddlog_derive/tests/ui/fail/duplicated_attrs.stderr
error: got 2 separate renames when only one is allowed
 --> $DIR/duplicated_attrs.rs:7:9
  |
7 | #[ddlog(rename = "Foo")]
  |         ^^^^^^

error: got 2 separate renames when only one is allowed
  --> $DIR/duplicated_attrs.rs:12:9
   |
12 | #[ddlog(into_record = "Bar")]
   |         ^^^^^^^^^^^
